# C_LISP

./: CMakeLists.txt  Environment.cpp  Environment.h  Expr.h  Interpreter.cpp  Interpreter.h  Lisp.cpp  Lisp.h  LispCallable.h  LispFunction.cpp  LispFunction.h  ParseError.h  Parser.cpp  Parser.h  README.docx  README.md  RuntimeError.cpp  RuntimeError.h  Scanner.cpp  Scanner.h  Stmt.h  TokenType.h  _Return.h  comparison.lisp  equals.lisp  global.cpp  global.h  hardcore_tests.lisp  interpreter_test.lisp  logical.lisp  parser_test.lisp  plus.lisp  questions.lisp  scanner_test.lisp  scratch.lisp  test.lisp  tester.cpp  testing_print.lisp
test_inputs/: comparison.lisp  cond_test.lisp  empty_list_error.lisp  function_tests.lisp  insertion_sort.lisp  list_ops.lisp  logical.lisp  number_operands_error.lisp  parsing_errors_1.lisp  parsing_errors_2.lisp  parsing_errors_3.lisp  plus.lisp  questions.lisp
